# x-ai

./: .bumpversion.toml  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
src/: api_key.rs  chat_compl.rs  client.rs  completions.rs  embedding.rs  embedding_get.rs  embedding_mod.rs  error.rs  get_mod.rs  lang_mod.rs  lib.rs  list_lang_mod.rs  list_mod.rs  traits.rs
tests/: api_key.rs  chat_compl.rs  completions.rs  completions_mod.rs  embedding.rs  embedding_get.rs  get_mod.rs  lang_mod.rs  list_lang_mod.rs  list_mod.rs
