[package]
name = "x-ai"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.41.1", features = ["full"] }
